# smoldot

./: Cargo.toml  jitpack.yml
light-base/src/: sync_service.rs
light-base/src/json_rpc_service/: background.rs
mobile-node/: README.md
mobile-node/android/: .gitignore  build.gradle.kts  settings.gradle.kts
mobile-node/android/app/: build.gradle.kts
mobile-node/android/app/src/androidTest/java/com/github/smoldot/: ExampleInstrumentedTest.kt
mobile-node/android/app/src/main/cpp/: CMakeLists.txt
mobile-node/android/app/src/main/cpp/src/: data.cpp  data.h  smoldot.cpp  smoldot.h  smoldot_ffi.cpp  smoldot_ffi.h  smoldot_jni.cpp  smoldot_jni.h  utils.cpp  utils.h
mobile-node/android/app/src/main/java/com/github/smoldot/: Smoldot.kt  SmoldotAndroid.kt
mobile-node/android/app/src/main/java/com/github/smoldot/internal/utils/: Flow.kt
mobile-node/android/app/src/test/java/com/github/smoldot/: ExampleUnitTest.kt
mobile-node/android/gradle/wrapper/: gradle-wrapper.properties
mobile-node/rust/: Cargo.toml
mobile-node/rust/src/: bindings.rs  init.rs  lib.rs  platform.rs
